DAWN OF THE SIMULATOR
Craft - upgraded some minor menus

System - upgraded to properly use & save the systems with a 1:1000km scalar, just need to run around for bugs

Mission - now works with system (again!) and craft (again!) and uses correct scaling
minor bug fixes to UI and spawning logic

Simulator - Physics:
Now properly uses Semi-Implicit Euler Integrator (would use Runge Kutta 8(9) but that stuff goes way over my head even now)
Added object to trace spacecraft's movement with a spline
Properly implemented initial velocity system to get everything in motion (this build now has legs!!!!)
Added some data points to the UI to give some data readouts

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/MainMenu/MainMenu.MainMenu
 EditorStartupMap=/Game/MainMenu/MainMenu.MainMenu
+GameInstanceClass=/Script/Astrodynamics_Actual.AstrophysicsInstance
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
