SImulation (correctly this time)
Now uses a 1uu radius sphere, so our scaling is all accurate.
Mission creator now properly handles sphere scaling for craft & planets.
Craft creator now properly displays the added content.
Updated the generic widget button blueprint to also allow editing of text justification on instances.
Simulator has functional time distortion with tick warping. Just need to get the units right.
Simulator planets move, just need to get the right velocity change so the spacecraft moves with.
Overall, looking good!

--- a/Config/DefaultEditor.ini
+++ b/Config/DefaultEditor.ini
@@ -4,7 +4,7 @@
 bDisplayUnits=True
 bDisplayUnitsOnComponentTransforms=True
 -DistanceUnits=EUnit::Centimeters
-+DistanceUnits=Kilometers
++DistanceUnits=Meters
 -MassUnits=EUnit::Kilograms
 +MassUnits=Kilograms
 -TimeUnits=EUnit::Seconds
