--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -57,6 +57,10 @@ bAuthorizeAutomaticWidgetVariableCreation=False
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/Astrodynamics_Actual")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/Astrodynamics_Actual")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="Astrodynamics_ActualGameModeBase")
+bSmoothFrameRate=True
+SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=30.000000),UpperBound=(Type=Exclusive,Value=75.000000))
+bUseFixedFrameRate=True
+FixedFrameRate=75.000000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
@@ -74,4 +78,9 @@ ManualIPAddress=
 
 [/Script/LevelSequence.LevelSequenceProjectSettings]
 LevelSequence.DefaultClockSource=0
+
+[/Script/Engine.PhysicsSettings]
+bSubstepping=True
+MaxSubstepDeltaTime=0.040635
+MaxSubsteps=8
 
