--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ Saved
 *.xcodeproj
 *.xcworkspace
 .claudiaideconfig
+Build/Windows/FileOpenOrder/CookerOpenOrder.log
+Build/Windows/FileOpenOrder/EditorOpenOrder.log
